# app-logger

./: .dockerignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  makefile  pyproject.toml  requirements.txt
.github/workflows/: prod.yaml  staging.yaml  testing.yaml
app/: controllers.py  database.py  model.py  routes.py  tasks.py
app/helpers/: admin.py  auth.py  decorators.py  paginater.py
helm/: values.prod.yaml  values.staging.yaml
helm/chart/: Chart.yaml  values.yaml
helm/chart/templates/: _helpers.tpl  celery-deployment.yaml  deployment.yaml  mongo.yaml  redis-deployment.yaml  redis.yaml  service.yaml  serviceaccount.yaml
scripts/: start.sh
tests/: conftest.py  test_logs.py
