[tool.poetry]
name = "app-logger"
version = "0.1.0"
description = "Logging application"
authors = ["khalifan-kfan <khalifanmuwonge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic-settings = "^2.2.1"
email_validator = "2.1.1"
annotated-types = "0.6.0"
anyio = "4.2.0"
attrs = "23.2.0"
click= "8.1.7"
dnspython = "2.6.0"
h11 = "0.14.0"
idna = "3.6"
jsonschema = "4.21.1"
jsonschema-specifications = "2023.12.1"
motor = "3.3.2"
pydantic = "2.6.1"
pydantic_core = "2.16.2"
pymongo = "4.6.1"
referencing = "0.33.0"
rpds-py = "0.18.0"
sniffio= "1.3.0"
starlette= "0.36.3"
typing_extensions= "4.9.0"
celery = "^5.3.6"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"